# International-Maritime-Piracy

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  readmd.md  readme.md
data/: ASAM 21 June 22.csv  RAW_all_piracy_events.csv
data/Asam_data_download.gdb/: a00000004.CatItemsByPhysicalName.atx  a00000004.FDO_UUID.atx  a00000004.gdbtable  a00000006.CatRelsByDestinationID.atx  a00000006.FDO_UUID.atx  a00000006.gdbtable  a00000009.FDO_globalid.atx  a00000009.gdbtablx  a00000009.spx
data/in_progress/: v1_lat_long.csv
models/: LDA_v2.py  SpacyGensimLDAmodelgen.py  att.py  corpus.pkl  dictionary.gensim  sp_gen_lda.py
models/early_models/: LDATEST.py  LDAprepTEST.py  dictionary.gensim  model10.gensim  model10.gensim.expElogbeta.npy  model10.gensim.state  model3.gensim  model3.gensim.expElogbeta.npy  model3.gensim.state  model3_50.gensim  model3_50.gensim.expElogbeta.npy  model3_50.gensim.id2word  model4_50.gensim  (+10 more)
notebook/: EDA for International Maritime Piracy.ipynb  Kmeans.ipynb  Models.ipynb  POS.ipynb
notebooks/: Dash test (don't add).ipynb  EDA.ipynb  EDA_w_GeoPandas.ipynb  step1_munging_and_eda_stuff.ipynb  step1_munging_data.ipynb  step2_importingJSON_Spacy.ipynb
scr/: CSVprocessor.py
src/: CSVprocessor.py  Untitled.ipynb  base_pipeline.py  codeconvertor.py  csv_processor.py  dash_app.py  dashboard.py  main.py  map.py  parse.py  parse_database.py  prepare.py  romans.py  tokenize_w_POS.py
untitled folder/: ASAMap.py  CSVprocessor.py  LDA.py  app2.py  app3.py  app4.py  app5.py  pair_soln.py  step2_importingJSON_Spacy.ipynb  stop_toke.py
(+1 files in other folders)
