[tool.poetry]
name = "international-maritime-piracy"
version = "0.1.0"
description = "Piracy data and analysis"
authors = ["hrokr <alex.rook@gmail.com>"]
readme = "README.md"
repository = "https://github.com/hrokr/International-Maritime-Piracy"
keywords = ["piracy", "international piracy", "ASAM", "robbery", "threats to shipping"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
